feature: fix endpoints of employees
